force-app/main/default/objects/TrainingDurationMetadata__mdt/TrainingDurationMetadata__mdt.object-meta.xml
<CustomObject>
    <label>Training Duration Metadata</label>
    <pluralLabel>Training Duration Metadata</pluralLabel>
</CustomObject>