force-app/main/default/objects/TrainingDurationMetadata__mdt/fields/PreparationTime__c.field-meta.xml
<CustomField>
    <fullName>PreparationTime__c</fullName>
    <label>Preparation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>