force-app/main/default/objects/TrainingDurationMetadata__mdt/fields/ReviewTime__c.field-meta.xml
<CustomField>
    <fullName>ReviewTime__c</fullName>
    <label>Review Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>