force-app/main/default/objects/TrainingDurationMetadata__mdt/fields/TrainingHoursPerDay__c.field-meta.xml
<CustomField>
    <fullName>TrainingHoursPerDay__c</fullName>
    <label>Training Hours Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>